--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="ram9953878727@gmail.com || Rohit Azad Malik || Rohit Azad UI Developer || JavaScript React Developer"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Dedicated to my sir Amit Yadav  Best of luck sir for your  future || Rohit Azad Malik || UI Developer Front End Developer Rohit Azad ||</title>
+    <meta content="Dedicated to my sir Amit Yadav  Best of luck sir for your  future" property="og:title">
+    <meta content="Dedicated to my sir Amit Yadav  Best of luck sir for your  future" property="og:description">
+    <meta content="Rohit Azad JavaScript Developer" property="og:site_name">
+    <meta content="website" property="og:type">
+    <meta content="https://www.rohitazad.com" property="og:url">
+    <meta content="%PUBLIC_URL%/assets/img/amityadav.jpg" property="og:image">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
